--- a/profile/themes/smc_base/scss/elements/teaser.scss
+++ b/profile/themes/smc_base/scss/elements/teaser.scss
@@ -41,14 +41,12 @@
   }
   .node-type {
     float: right;
-		width: -webkit-fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
+		white-space: nowrap;
 		font-size: .75em;
 		
 		position: absolute;
 		top: 2em;
-		right: 1em;
+		right: 0;
 		
 		border-bottom-right-radius: 0;
 		border-top-right-radius: 0;
@@ -174,7 +172,9 @@
       }
       
     }
-    
+    .node-type {
+      right: 1em;
+    }
     .node-location {
       
       &:after {
